feat:下載 JSON/CSV 範例檔

--- a/index.html
+++ b/index.html
@@ -196,6 +196,16 @@
         </label>
       </div>
 
+      <!-- 範例檔下載 -->
+      <div class="d-flex flex-wrap align-items-center gap-2">
+        <a href="/data/demo.json" download class="btn btn-outline-secondary btn-sm">
+          <i class="bi bi-file-earmark-code"></i> 下載 JSON 範例
+        </a>
+        <a href="/data/demo.csv" download class="btn btn-outline-secondary btn-sm">
+          <i class="bi bi-file-earmark-spreadsheet"></i> 下載 CSV 範例
+        </a>
+      </div>
+
       <!-- PDF / 清除 -->
       <div class="btn-group me-2" role="group">
         <button class="btn btn-primary btn-sm" title="匯出 PDF" onclick="exportPDF()">
