--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
 
       <!-- 範例檔下載 -->
       <div class="d-flex flex-wrap align-items-center gap-2">
-        <a href="/demo.json" download class="btn btn-outline-secondary btn-sm">
+        <a href="./demo.json" download class="btn btn-outline-secondary btn-sm">
           <i class="bi bi-file-earmark-code"></i> 下載 JSON 範例
         </a>
-        <a href="/demo.csv" download class="btn btn-outline-secondary btn-sm">
+        <a href="./demo.csv" download class="btn btn-outline-secondary btn-sm">
           <i class="bi bi-file-earmark-spreadsheet"></i> 下載 CSV 範例
         </a>
       </div>
