--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ document.getElementById('itemTable').addEventListener('blur', e=>{
 </script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   
-  <script src="/src/main.js"></script>
+  <script src="src/main.js"></script>
   <!-- jQuery, colResizable & html2pdf -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/colResizable/1.6/colResizable-1.6.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
