--- a/index.html
+++ b/index.html
@@ -318,6 +318,6 @@
   });
   </script>
   <!-- 自己的主程式，記得用相對路徑 -->
-  <script defer src="src/main.js"></script>
+  <script defer src="main.js"></script>
 </body>
 </html>
